// Copyright (c) 2022, KarmaCoin Authors. a@karmaco.in.
// This work is licensed under the KarmaCoin v0.1.0 license published in the LICENSE file of this repo.
//

syntax = "proto3";
package karma_coin.blockchain;
import "karma_coin/core_types/types.proto";

// Blockchain api
service BlockchainService {
  // Create a block with the given transactions
  rpc CreateBlock(CreateBlockRequest) returns (CreateBlockResponse);

  // Get the current blockchain tip - the height of the tip block
  rpc GetHeadHeight(GetHeadHeightRequest) returns (GetHeadHeightResponse);

  rpc GetBlockByHeight(GetBlockByHeightRequest) returns (GetBlockByHeightResponse);
}

message CreateBlockRequest {
  repeated core_types.SignedTransaction transactions = 1;
}

message CreateBlockResponse {
  core_types.Block block = 1;
}

message GetHeadHeightRequest {
}

message GetHeadHeightResponse {
  uint64 height = 1;
}

message GetBlockByHeightRequest {
  uint64 height = 1;
}

message GetBlockByHeightResponse {
  core_types.Block block = 1;
}